--- a/app/globals.css
+++ b/app/globals.css
@@ -69,5 +69,12 @@
 }
 
 body {
-  background: rgb(0, 0, 0);
+  /* background: rgb(0, 0, 0); */
+}
+
+@media print {
+  body {
+    width: 90%;
+    margin: 20px auto;
+  }
 }
